[build-system]
build-backend = "cmeel.build"
requires = ["cmeel-gmp", "cmeel-mpfr", "cmeel-texinfo", "cmeel[build]"]

[project]
description = "cmeel distribution for MPC"
license = "LGPL-3.0-or-later"
name = "cmeel-mpc"
requires-python = ">= 3.8"
version = "1.3.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-mpc"
repository = "https://github.com/cmake-wheel/cmeel-mpc.git"

[tool.cmeel]
build-number = 2
py3-none = true
run-tests = false

[tool.tomlsort]
all = true
